# Prediction_Analyzer

./: .env.example  .flake8  .gitignore  =22.0.0  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  Dockerfile  EXPERT_BUG_AUDIT_FINDINGS.md  EXPERT_BUG_AUDIT_PROMPT.md  FRONTEND_QA_AUDIT_PROMPT.md  INSTALL.md  MCP_READINESS_PLAN.md  MULTI_MARKET_PLAN.md  Makefile  QA_AUDIT_PROMPT.md  README.md  SECURITY_AUDIT.md  TUTORIAL.md  docker-compose.yml  gui.py  install.bat  pyproject.toml  pytest.ini  requirements.txt  run.py  run_api.py  run_gui.bat  run_gui.py  run_static_tests.py  setup.py
.claude/: settings.json
.github/workflows/: ci.yml
data/: example_trades.json
data/samples/: kalshi_trades.json  limitless_trades.json  manifold_trades.json  polymarket_trades.json
docs/: STATE_MACHINE_DIAGRAMS.md
prediction_analyzer/: __init__.py  __main__.py  comparison.py  config.py  drawdown.py  exceptions.py  filters.py  inference.py  logging_config.py  metrics.py  pnl.py  positions.py  tax.py  trade_filter.py  trade_loader.py
prediction_analyzer/api/: __init__.py  config.py  database.py  dependencies.py  main.py
prediction_analyzer/api/models/: __init__.py  analysis.py  trade.py  user.py
prediction_analyzer/api/routers/: __init__.py  analysis.py  auth.py  charts.py  trades.py  users.py
prediction_analyzer/api/schemas/: __init__.py  analysis.py  auth.py  charts.py  trade.py  user.py
prediction_analyzer/api/services/: __init__.py  analysis_service.py  auth_service.py  chart_service.py  trade_service.py
prediction_analyzer/api/static/: index.html
prediction_analyzer/api/static/css/: styles.css
prediction_analyzer/api/static/js/: api.js  app.js  auth.js  dashboard.js  markets.js  settings.js  trades.js  upload.js
prediction_analyzer/charts/: __init__.py  enhanced.py  global_chart.py  pro.py  simple.py
prediction_analyzer/core/: __init__.py  interactive.py
prediction_analyzer/providers/: __init__.py  base.py  kalshi.py  limitless.py  manifold.py  pnl_calculator.py  polymarket.py
prediction_analyzer/reporting/: __init__.py  report_data.py  report_text.py
prediction_analyzer/utils/: __init__.py  auth.py  data.py  export.py  math_utils.py  time_utils.py
prediction_mcp/: __init__.py  __main__.py  _apply_filters.py  errors.py  persistence.py  serializers.py  server.py  state.py  validators.py
prediction_mcp/tools/: __init__.py  analysis_tools.py  chart_tools.py  data_tools.py  export_tools.py  filter_tools.py  portfolio_tools.py  tax_tools.py
tests/: conftest.py  test_bugfixes.py  test_bugfixes_audit2.py  test_bugfixes_audit3.py  test_fees_wash_sales.py  test_package.py  test_tax_bugfixes.py  test_trader_critical.py
tests/api/: conftest.py  test_auth.py  test_security.py  test_trades.py
tests/mcp/: conftest.py  test_analysis_tools.py  test_chart_tools.py  test_data_tools.py  test_errors.py  test_export_tools.py  test_filter_tools.py  test_llm_inputs.py  test_persistence.py  test_portfolio_tools.py  test_serializers.py  test_server.py  test_sse_transport.py  test_state.py  test_tax_tools.py  test_transport.py  test_validators.py
tests/static_patterns/: __init__.py  test_api_contracts.py  test_config_integrity.py  test_data_integrity.py  test_dataclass_contracts.py  test_edge_cases.py  test_filter_contracts.py  test_imports.py  test_pnl_contracts.py  test_utility_functions.py
