[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-analyzer"
version = "1.0.0"
description = "A complete modular analysis tool for prediction market traders"
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "plotly>=5.20.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
    "eth-account>=0.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]

[project.scripts]
prediction-analyzer = "prediction_analyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/prediction_analyzer"
Documentation = "https://github.com/yourusername/prediction_analyzer/wiki"
Repository = "https://github.com/yourusername/prediction_analyzer"
