[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-analyzer"
version = "1.0.0"
description = "A complete modular analysis tool for prediction market traders"
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "plotly>=5.20.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
prediction-analyzer = "prediction_analyzer.__main__:main"
prediction-mcp = "prediction_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/prediction_analyzer"
Documentation = "https://github.com/yourusername/prediction_analyzer/wiki"
Repository = "https://github.com/yourusername/prediction_analyzer"
