[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-analyzer"
version = "1.0.0"
description = "A complete modular analysis tool for prediction market traders"
readme = "README.md"
authors = [
    {name = "Frostbite1536"}
]
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "plotly>=5.20.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=1.5.0",
    "types-requests>=2.28.0",
]
limitless = [
    "limitless-sdk>=1.0.4",
]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
prediction-analyzer = "prediction_analyzer.__main__:main"
prediction-mcp = "prediction_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Frostbite1536/Prediction_Analyzer"
Documentation = "https://github.com/Frostbite1536/Prediction_Analyzer/wiki"
Repository = "https://github.com/Frostbite1536/Prediction_Analyzer"

[tool.setuptools.packages.find]
include = ["prediction_analyzer*", "prediction_mcp*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
